--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xp-schema",
   "license": "BSD-3-Clause",
   "description": "This class is used to provide scheming functionalities, including sanitization and validation.",
-  "version": "0.8.3",
+  "version": "0.8.4",
   "homepage": "https://github.com/ExpandJS/xp-schema",
   "author": "ExpandJS <dev@expandjs.com> (http://www.expandjs.com)",
   "contributors": [
@@ -18,6 +18,7 @@
     "expandjs": "*"
   },
   "scripts": {
-    "browserify": "browserify index -i expandjs > dist/xp-schema.js"
+    "browserify": "browserify index -i expandjs > dist/xp-schema.js",
+    "browserify-min": "browserify -d index -i expandjs -p [minifyify --map xp-schema.min.map --output dist/xp-schema.min.map] > dist/xp-schema.min.js"
   }
 }
