--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "xp-schema",
   "license": "BSD-3-Clause",
   "version": "0.8.6",
-  "description": "This class is used to provide scheming functionalities, including sanitization and validation.",
+  "description": "This class is used to provide scheming functionality, including sanitization and validation.",
   "homepage": "http://www.expandjs.com/classes/xp-schema",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
