--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "license": "BSD-3-Clause",
   "version": "0.8.9",
   "description": "This class is used to provide scheming functionality, including sanitization and validation.",
-  "homepage": "http://www.expandjs.com/classes/xp-schema",
+  "homepage": "http://expandjs.com/classes/xp-schema",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
