--- a/package.json
+++ b/package.json
@@ -22,4 +22,9 @@
     "browserify": "browserify index -i expandjs > dist/xp-schema.js",
     "browserify-min": "browserify -d index -i expandjs -p [minifyify --map xp-schema.min.map --output dist/xp-schema.min.map] > dist/xp-schema.min.js"
   }
+  "keywords": [
+      "expandjs",
+      "web app",
+      "schema"
+  ]
 }
