--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "xp-load": "*"
   },
   "scripts": {
-    "browserify": "browserify index -i expandjs > dist/xp-schema.js",
-    "browserify-min": "browserify -d index -i expandjs -p [minifyify --map xp-schema.min.map --output dist/xp-schema.min.map] > dist/xp-schema.min.js"
+    "build": "browserify index -i expandjs > dist/xp-schema.js --standalone XPSchema && npm run build:min",
+    "build:min": "browserify -d index -i expandjs -p [minifyify --map xp-schema.min.map --output dist/xp-schema.min.map] > dist/xp-schema.min.js --standalone XPSchema"
   },
   "keywords": [
       "expandjs",
