--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "xp-schema",
   "license": "BSD-3-Clause",
-  "version": "0.8.12",
-  "description": "This class is used to provide scheming functionality, including sanitization and validation.",
+  "version": "0.9.0",
+  "description": "This class is used to provide scheming functionality, including sanitization and validation",
   "homepage": "http://expandjs.com/classes/xp-schema",
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
