- Added mat-breadcrumb - Added xp-finder-behavior - Added xp-master-behavior - Added xp-slave-behavior - Major documentation improvements - Minor bug fixes - Moved item finding from xp-selected-behavior to xp-finder-behavior - Replaced xp-master-state with xp-master-behavior - Replaced xp-slave-state with xp-slave-behavior

--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "xp-schema",
   "license": "BSD-3-Clause",
   "version": "0.9.6",
+  "main": "xp-schema.html",
   "description": "This class is used to provide scheming functionality, including sanitization and validation",
   "homepage": "http://expandjs.com/classes/xp-schema",
   "authors": [
@@ -15,9 +16,6 @@
     "javascript",
     "expandjs",
     "web-components"
-  ],
-  "main": [
-    "xp-schema.html"
   ],
   "ignore": [
     "**/.*"
