--- a/bower.json
+++ b/bower.json
@@ -1,28 +1,18 @@
 {
   "name": "xp-schema",
-  "license": "BSD-3-Clause",
-  "version": "0.10.0",
-  "main": "xp-schema.html",
   "description": "A class used to provide scheming functionality",
-  "homepage": "http://expandjs.com/classes/xp-schema",
+  "version": "1.0.0",
+  "license": "BSD-3-Clause",
+  "homepage": "https://expandjs.com/classes/xp-schema",
+
   "authors": [
     "Giuliano Rullo <g.rullo@expandjs.com>",
     "Maurizio Stefàno <m.stefano@expandjs.com>",
     "Robert Manolea <r.manolea@expandjs.com>"
   ],
+
   "keywords": [
-    "nodejs",
-    "web app",
-    "javascript",
     "expandjs",
-    "custom elements",
-    "web-components"
-  ],
-  "ignore": [
-    "**/.*"
-  ],
-  "dependencies": {
-    "expandjs": "ExpandJS/expandjs#0.10.0",
-    "xp-emitter": "ExpandJS/xp-emitter#0.10.0"
-  }
+    "nodejs"
+  ]
 }
