--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xp-schema",
   "description": "A class used to provide scheming functionality",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "license": "BSD-3-Clause",
   "homepage": "https://expandjs.com/classes/xp-schema",
   "author": "ExpandJS <dev@expandjs.com> (https://expandjs.com)",
@@ -20,6 +20,11 @@
   "dependencies": {
     "expandjs": "^1.0.0",
     "xp-emitter": "^1.0.0"
+  },
+
+  "devDependencies": {
+    "uglifyjs-webpack-plugin": "^1.1.0",
+    "webpack": "^3.10.0"
   },
 
   "scripts": {
